librbd/cache/pwl/ssd: align all entry related variables to 64 bits

Fixes: https://tracker.ceph.com/issues/50675

Signed-off-by: Yin Congmin <congmin.yin@intel.com>